--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'uk.co.chrisjenx:calligraphy:2.1.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
-    compile 'com.sothree.slidinguppanel:library:3.3.0'
-    compile 'com.sothree.slidinguppanel:library:3.3.0'
+    compile 'fr.tvbarthel.blurdialogfragment:lib:2.1.6'
 }
